--- a/uicorek/src/main/res/values/stylesk_layoutk.xml
+++ b/uicorek/src/main/res/values/stylesk_layoutk.xml
@@ -25,4 +25,12 @@
     <style name="LeleTabLayout_TextStyle">
         <item name="android:textSize">13sp</item>
     </style>-->
+
+    <!--TabLayout字体大小-->
+    <style name="StyleK_TabLayout_TextStyle">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 </resources>
