--- a/xmlk/src/main/res/values/stylesk_btnk.xml
+++ b/xmlk/src/main/res/values/stylesk_btnk.xml
@@ -6,13 +6,15 @@
 
     <style name="StyleK_MaterialBtn" parent="StyleK_Btn">
         <item name="android:layout_height">wrap_content</item>
-<!--        <item name="android:backgroundTint">@color/cok_blue_e8f3ff</item>-->
+        <!--        <item name="android:backgroundTint">@color/cok_blue_e8f3ff</item>-->
         <item name="android:textColor">@color/cok_blue_287ff1</item>
         <item name="android:shadowColor">@color/cok_blue_287ff1</item>
         <item name="android:textSize">16sp</item>
         <item name="cornerRadius">16dp</item>
         <item name="strokeColor">@color/cok_blue_0876e4</item>
     </style>
+
+    <style name="StyleK_MaterialBtn.Outlined" parent="ThemeK_WidgetMaterialBtnOutlined" />
 
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
@@ -21,7 +23,7 @@
         <item name="android:layout_height">@dimen/dp_040</item>
         <item name="android:paddingStart">@dimen/dp_010</item>
         <item name="android:paddingEnd">@dimen/dp_010</item>
-<!--        <item name="android:stateListAnimator">@null</item>-->
+        <!--        <item name="android:stateListAnimator">@null</item>-->
         <item name="android:ellipsize">end</item>
         <item name="android:textAllCaps">false</item>
     </style>
