--- a/xmlk/src/main/res/values/dimensk.xml
+++ b/xmlk/src/main/res/values/dimensk.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="sp_10">10sp</dimen>
+    <dimen name="sp_11">11sp</dimen>
     <dimen name="sp_12">12sp</dimen>
     <dimen name="sp_13">13sp</dimen>
     <dimen name="sp_14">14sp</dimen>
