--- a/xmlk/src/main/res/values/dimensk.xml
+++ b/xmlk/src/main/res/values/dimensk.xml
@@ -18,6 +18,7 @@
     <!--/////////////////////////////////////////////////-->
 
     <dimen name="dp_000">0dp</dimen>
+    <dimen name="dp_001">1dp</dimen>
     <dimen name="dp_002">2dp</dimen>
     <dimen name="dp_003">3dp</dimen>
     <dimen name="dp_004">4dp</dimen>
