--- a/xmlk/src/main/res/values-v27/themesk_material.xml
+++ b/xmlk/src/main/res/values-v27/themesk_material.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="ThemeK_AppLightNoAction.Transparent">
+    <style name="ThemeK_MaterialComponents_Light_NoActionBar.Transparent">
         <!-- 设置状态栏背景色为透明 -->
         <item name="android:statusBarColor">@color/cok_transparent</item>
         <!-- 设置导航栏背景色为透明 -->
@@ -14,7 +13,7 @@
 
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <style name="ThemeK_AppLightNoAction.FullScreen">
+    <style name="ThemeK_MaterialComponents_Light_NoActionBar.FullScreen">
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
