--- a/xmlk/src/main/res/values-v21/stylesk_bar.xml
+++ b/xmlk/src/main/res/values-v21/stylesk_bar.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="StyleK_Progress_Horizontal.Indeterminate">
+    <style name="StyleK_ProgressBar_Horizontal.Indeterminate">
         <item name="android:indeterminate">true</item>
         <item name="android:indeterminateTint">@color/cok_blue_0177fd</item>
     </style>
 
     <!--////////////////////////////////////////////////////////////////-->
 
-    <style name="StyleK_Progress.Indeterminate">
+    <style name="StyleK_ProgressBar.Indeterminate">
         <item name="android:indeterminate">true</item>
         <item name="android:indeterminateTint">@color/cok_blue_0177fd</item>
     </style>
