--- a/xmlk/src/main/res/values-v21/stylesk_dialog.xml
+++ b/xmlk/src/main/res/values-v21/stylesk_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="DialogK_Style_BtnCancel">
+<!--    <style name="DialogK_Style_BtnCancel">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">5dp</item>
@@ -13,5 +13,5 @@
     <style name="DialogK_Style_BtnSure" parent="DialogK_Style_BtnCancel">
         <item name="android:backgroundTint">@color/cok_blue_287ff1</item>
         <item name="android:textColor">@color/cok_blue_e8f3ff</item>
-    </style>
+    </style>-->
 </resources>
