--- a/xmlk/src/main/res/values/stylesk_bar.xml
+++ b/xmlk/src/main/res/values/stylesk_bar.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="StyleK_Progress_Horizontal" parent="Widget.AppCompat.ProgressBar.Horizontal">
+    <style name="StyleK_ProgressBar_Horizontal" parent="WidgetK_AppCompat_ProgressBar_Horizontal">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">5dp</item>
         <item name="android:max">100</item>
     </style>
 
-    <style name="StyleK_Progress_Horizontal.Indeterminate">
+    <style name="StyleK_ProgressBar_Horizontal.Indeterminate">
         <item name="android:indeterminate">true</item>
 <!--        <item name="android:indeterminateTint">@color/cok_blue_0177fd</item>-->
     </style>
 
     <!--////////////////////////////////////////////////////////////////-->
 
-    <style name="StyleK_Progress" parent="Widget.AppCompat.ProgressBar">
+    <style name="StyleK_ProgressBar" parent="WidgetK_AppCompat_ProgressBar">
         <item name="android:layout_width">42dp</item>
         <item name="android:layout_height">42dp</item>
         <item name="android:max">100</item>
     </style>
 
-    <style name="StyleK_Progress.Indeterminate">
+    <style name="StyleK_ProgressBar.Indeterminate">
         <item name="android:indeterminate">true</item>
 <!--        <item name="android:indeterminateTint">@color/cok_blue_0177fd</item>-->
     </style>
@@ -31,6 +31,6 @@
         <item name="actionMenuTextColor">@color/cok_white</item>
         <item name="colorControlNormal">@color/cok_white</item>
         <item name="textAllCaps">false</item>
-        <item name="actionOverflowMenuStyle">@style/ThemeK_WidgetAppLightPopupOverflow.DisOverlap</item>
+        <item name="actionOverflowMenuStyle">@style/WidgetK_AppCompat_Light_PopupMenu_Overflow.DisOverlap</item>
     </style>
 </resources>
