--- a/xmlk/src/main/res/values/stylesk_dialog.xml
+++ b/xmlk/src/main/res/values/stylesk_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="DialogK_Style_Title">
+<!--    <style name="DialogK_Style_Title">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginVertical" tools:targetApi="o">14dp</item>
@@ -13,14 +13,14 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">5dp</item>
-<!--        <item name="android:backgroundTint">@color/cok_blue_e8f3ff</item>-->
+&lt;!&ndash;        <item name="android:backgroundTint">@color/cok_blue_e8f3ff</item>&ndash;&gt;
         <item name="android:textColor">@color/cok_blue_0876e4</item>
         <item name="android:textSize">16sp</item>
         <item name="cornerRadius">4dp</item>
     </style>
 
     <style name="DialogK_Style_BtnSure" parent="DialogK_Style_BtnCancel">
-<!--        <item name="android:backgroundTint">@color/cok_blue_287ff1</item>-->
+&lt;!&ndash;        <item name="android:backgroundTint">@color/cok_blue_287ff1</item>&ndash;&gt;
         <item name="android:textColor">@color/cok_blue_e8f3ff</item>
-    </style>
+    </style>-->
 </resources>
