--- a/xmlk/src/main/res/values/dimensk.xml
+++ b/xmlk/src/main/res/values/dimensk.xml
@@ -38,6 +38,7 @@
     <dimen name="dp_028">28dp</dimen>
     <dimen name="dp_030">30dp</dimen>
     <dimen name="dp_035">35dp</dimen>
+    <dimen name="dp_036">36dp</dimen>
     <dimen name="dp_040">40dp</dimen>
     <dimen name="dp_045">45dp</dimen>
     <dimen name="dp_048">48dp</dimen>
